--- a/xv6-public/.vscode/settings.json
+++ b/xv6-public/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "random": "cpp"
+        "random": "cpp",
+        "user.h": "c",
+        "limits": "c"
     }
 }
