--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -170,6 +170,7 @@ UPROGS=\
 	_echo\
 	_helloworld\
 	_sanity\
+	_sanity2\
 	_memsizetest\
 	_policy\
 	_forktest\
@@ -252,7 +253,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 # check in that version.
 
 EXTRA=\
-	mkfs.c ulib.c user.h cat.c echo.c helloworld.c sanity.c memsizetest.c policy.c forktest.c grep.c kill.c\
+	mkfs.c ulib.c user.h cat.c echo.c helloworld.c sanity.c sanity2.c memsizetest.c policy.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
